--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
           socket.emit('chat message', $('#m').val());
           $('#m').val('');
           return false;
-        })
-      })
+        });
+        socket.on('chat message', function(msg){
+          $('#messages').append($('<li>').text(msg));
+        });
+        // We capture a chat message event we’ll include it in the page.
+      });
     </script>
   </body>
 </html>
